# constexpr_regex

./: CMakeLists.txt  README.md
example/: main.cpp
include/: constexpr_regex.hpp
